# PyDoublyLinkedList

./: .gitignore  CHANGES  README.MD  doubly_linked_list.c  node.c  pyproject.toml  setup.py  testing_stuff.py
.github/workflows/: build_publish_wheels.yml
src/: doubly_linked_list.c
src/py_doubly_linked_list/: __init__.pyi
tests/: create_random_list.py  random_list.py  test.py  test_build.py  test_my_speed.py  test_speed.py
